Dashboard & Home Page 	√+ The outside margin has been reduced nicely, but the in between spacing on Personal home page, Admin Dashboard, and My Requests are still large.  If we can’t reduce the in-between space, then we should revert back. Admin > Super Admin 	√+ “Approval” (not Approvial) in Leave Request > Approval Mode still needs to be fixed Admin > Holiday Editor 	√ + Missing years in drop-down -- 2018 should be displayed by default

--- a/app/view/dashboard/admin/LeaveRequestsRequiringAction.scss
+++ b/app/view/dashboard/admin/LeaveRequestsRequiringAction.scss
@@ -20,7 +20,7 @@
 
 .admin-leaverequestsrequiringaction-dashboard {
     height:auto; 
-    margin:0pt 0pt 14pt 0pt;
+    margin:0pt 0pt 6pt 0pt;
 }
 
 .headerCursor {
